--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ flutter:
     - assets/images/product2.png
     - assets/images/product3.png
     - assets/images/product4.png
+    - assets/images/rowPic.jpg
+    - assets/images/rowPic1.jpg
 
 
 
