--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ flutter:
     - assets/images/product4.png
     - assets/images/rowPic.jpg
     - assets/images/rowPic1.jpg
+    - assets/images/pic.jpg
+    - assets/images/pic3.jpg
+    - assets/images/pic2.png
+    - assets/images/qatar.png
 
 
 
