--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   stylish_bottom_bar: ^1.1.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,9 @@ flutter:
     - assets/images/pic3.jpg
     - assets/images/pic2.png
     - assets/images/qatar.png
+    - assets/images/crispy.png
+    - assets/images/image_hand.png
+    - assets/images/image_burger.png
 
 
 
