--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   stylish_bottom_bar: ^1.1.0
   flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
     - assets/images/crispy.png
     - assets/images/image_hand.png
     - assets/images/image_burger.png
+    - assets/images/qatar_logo.png
 
 
 
