--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,8 @@ flutter:
     - assets/images/image_burger.png
     - assets/images/qatar_logo.png
     - assets/images/map.png
+    - assets/images/order.png
+    - assets/images/profile.png
 
 
 
