--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/logo.png
-    - assets/images/firstImage.jpg
+    - assets/images/Main_image.png
     - assets/images/product1.png
     - assets/images/product2.png
     - assets/images/product3.png
