--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   pin_code_text_field: ^1.8.0
   google_maps_flutter: ^2.6.1
+  ticket_widget: ^1.0.2
+  ticket_material: ^0.3.1
 
 dev_dependencies:
   flutter_test:
