search screen added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,9 @@ flutter:
     - assets/images/map2.png
     - assets/images/order.png
     - assets/images/profile.png
+    - assets/images/delivery-man .png
+    - assets/images/hand-burger.png
+
 
 
 
