search screen change

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
     - assets/images/delivery-man .png
     - assets/images/hand-burger.png
     - assets/vuesax/linear/candle-2.png
+    - assets/images/coupon.png
 
 
 
