search screen change

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ flutter:
     - assets/images/hand-burger.png
     - assets/vuesax/linear/candle-2.png
     - assets/images/coupon.png
+    - assets/images/copy.png
 
 
 
