--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,13 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -67,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/icon.png
     - assets/images/logo.png
     - assets/images/Main_image.png
     - assets/images/product1.png
@@ -94,6 +102,7 @@ flutter:
     - assets/images/adon1.png
     - assets/images/adon2.png
     - assets/images/adon3.png
+  
 
 
 
