--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
     - assets/images/adon1.png
     - assets/images/adon2.png
     - assets/images/adon3.png
+    - assets/images/welcome.png
   
 
 
