style complete changed

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,10 +123,11 @@ flutter:
     - family: Aeonik
       fonts:
         - asset: assets/fonts/AeonikTRIAL-Regular.otf
+        - asset: assets/fonts/AeonikTRIAL-Bold.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
-  #     fonts:
+      # fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
