--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   ticket_material: ^0.3.1
   flutter_svg: ^2.0.10+1
   flutter_launcher_icons: ^0.13.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
